--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         </div>
         <section class="donation-area">
             <div class="icon-area">
-                <img class="icon" src="/imgs/Frame.png" alt="">
+                <img class="icon" src="imgs/Frame.png" alt="">
                 <h3>Direct Help</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum nam distinctio repellat deleniti.</p>
                 
             </div>
             <div class="icon-area">
-                <img class= "icon" src="/imgs/Frame.png" alt="">
+                <img class= "icon" src="imgs/Frame.png" alt="">
                 <h3>Direct Help</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum
                     nam distinctio repellat deleniti.</p>
@@ -90,13 +90,13 @@
         </section>
         <section class="donation-area">
             <div class="icon-area">
-                <img class="icon" src="/imgs/Frame.png" alt="">
+                <img class="icon" src="imgs/Frame.png" alt="">
                 <h3>Direct Help</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum
                     nam distinctio repellat deleniti.</p>
             </div>
             <div class="icon-area">
-                <img class="icon" src="/imgs/Frame.png" alt="">
+                <img class="icon" src="imgs/Frame.png" alt="">
                 <h3>Direct Help</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum
                     nam distinctio repellat deleniti.</p>
