--- a/index.html
+++ b/index.html
@@ -75,32 +75,26 @@
         <section class="donation-area">
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <h3>Direct Help</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum nam distinctio repellat deleniti.</p>
-                
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
             </div>
             <div class="icon-area">
-                <img class= "icon" src="imgs/Frame.png" alt="">
-                <h3>Direct Help</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum
-                    nam distinctio repellat deleniti.</p>
-                
+                <img class="icon" src="imgs/Frame.png" alt="">
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
+
             </div>
 
         </section>
         <section class="donation-area">
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <h3>Direct Help</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum
-                    nam distinctio repellat deleniti.</p>
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
             </div>
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <h3>Direct Help</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis hic pariatur minus deserunt dolorem culpa harum
-                    nam distinctio repellat deleniti.</p>
-
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
             </div>
 
         </section>
