--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
         <section class="donation-area">
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet
+                    consectetur
                     adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
             </div>
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet
+                    consectetur
                     adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
 
             </div>
@@ -89,12 +91,69 @@
         <section class="donation-area">
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet
+                    consectetur
                     adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
             </div>
             <div class="icon-area">
                 <img class="icon" src="imgs/Frame.png" alt="">
-                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
+                <p class="donation-paragraph"> <span class="title">Direct Help</span> <br> Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Accusamus at, amet explicabo iste sunt maiores!</p>
+            </div>
+
+        </section>
+        <section class="img-section">
+            <div class="monajat">
+                <img class="monajat-img" src="imgs/Rectangle 251@2x.png" alt="">
+
+
+            </div>
+            <div class="monajat">
+                <img class="monajat-img" src="imgs/Rectangle 251@2x.png" alt="">
+
+            </div>
+            <div class="monajat">
+                <img class="monajat-img" src="imgs/Rectangle 251@2x.png" alt="">
+
+            </div>
+
+        </section>
+        <div class="text-align">
+            <h1>Extend Your Hand of Charity. Earn</h1>
+            <h1>Rewards for the Hereafter</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, dolorem ullam! Maiores reiciendis ipsa
+                iusto sit debitis odio, placeat harum.</p>
+        </div>
+        <section class="img-section">
+            <div class="monajat">
+                <img class="monajat-img" src="imgs/Rectangle 252.png" alt="">
+                <h3 class="last-padding">Zakat Fund</h3>
+                <p  class="last-padding">Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at eam
+                    falli deterruisset. No duo populo
+                    animal noluisse, enim</p> <br>
+                    <h3 class="last-padding color" > <u> Donate For Zakat</u> </h3>
+
+            </div>
+            <div class="monajat">
+                <img class="monajat-img" src="imgs/Rectangle 252.png" alt="">
+                <h3 class="last-padding">Zakat Fund</h3>
+                <p  class="last-padding">Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at eam
+                    falli deterruisset. No duo populo
+                    animal noluisse, enim</p> <br>
+                    <h3 class="last-padding color"> <u> Donate For Zakat</u> </h3>
+
+            </div>
+            <div class="monajat">
+                <img class="monajat-img" src="imgs/Rectangle 252.png" alt="">
+                <h3 class="last-padding">Zakat Fund</h3>
+                <p  class="last-padding">Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at eam
+                    falli deterruisset. No duo populo
+                    animal noluisse, enim</p> <br>
+                    <h3 class="last-padding color"> <u> Donate For Zakat</u> </h3>
+
             </div>
 
         </section>
