--- a/index.html
+++ b/index.html
@@ -124,44 +124,58 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, dolorem ullam! Maiores reiciendis ipsa
                 iusto sit debitis odio, placeat harum.</p>
         </div>
-        <section class="img-section">
-            <div class="monajat">
-                <img class="monajat-img" src="imgs/Rectangle 252.png" alt="">
-                <h3 class="last-padding">Zakat Fund</h3>
-                <p  class="last-padding">Lorem ipsum dolor sit amet, usu
-                    cu esse possit referrentur, at eam
-                    falli deterruisset. No duo populo
-                    animal noluisse, enim</p> <br>
-                    <h3 class="last-padding color" > <u> Donate For Zakat</u> </h3>
+        <section class="donate-section">
+            <div class="zakat-fund">
+                <p class="text-donation">
+                <h3>Zakat Fund</h3><br>
+                Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo
+                animal noluisse, enim. <br> <br>
+                <h3 class="red-color"><u> Donate for zakat</u></h3>
+                </p>
 
             </div>
-            <div class="monajat">
-                <img class="monajat-img" src="imgs/Rectangle 252.png" alt="">
-                <h3 class="last-padding">Zakat Fund</h3>
-                <p  class="last-padding">Lorem ipsum dolor sit amet, usu
-                    cu esse possit referrentur, at eam
-                    falli deterruisset. No duo populo
-                    animal noluisse, enim</p> <br>
-                    <h3 class="last-padding color"> <u> Donate For Zakat</u> </h3>
+            <div class="zakat-fund">
+                <p class="text-donation">
+                <h3>Zakat Fund</h3><br>
+                Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo
+                animal noluisse, enim. <br> <br>
+                <h3 class="red-color"><u> Donate for zakat</u></h3>
+                </p>
+                
+
 
             </div>
-            <div class="monajat">
-                <img class="monajat-img" src="imgs/Rectangle 252.png" alt="">
-                <h3 class="last-padding">Zakat Fund</h3>
-                <p  class="last-padding">Lorem ipsum dolor sit amet, usu
-                    cu esse possit referrentur, at eam
-                    falli deterruisset. No duo populo
-                    animal noluisse, enim</p> <br>
-                    <h3 class="last-padding color"> <u> Donate For Zakat</u> </h3>
+            <div class="zakat-fund">
+                <p class="text-donation">
+                <h3>Zakat Fund</h3><br>
+                Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo
+                animal noluisse, enim. <br> <br>
+                <h3 class="red-color"><u> Donate for zakat</u></h3>
+                </p>
+
 
             </div>
-
         </section>
 
 
 
-    </header>
+    </header>   
 
 </body>
+<footer>
+    <p id="fotter">
+        <h1 id="color-red">Eid Ul Adha</h1>
+        <p id="color-white">i'm gonna do it</p>
+
+    </p>
+    
+
+</footer>
 
 </html>
