--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Eid-Zakat</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -145,7 +149,7 @@
                 animal noluisse, enim. <br> <br>
                 <h3 class="red-color"><u> Donate for zakat</u></h3>
                 </p>
-                
+
 
 
             </div>
@@ -165,16 +169,16 @@
 
 
 
-    </header>   
+    </header>
 
 </body>
 <footer>
     <p id="fotter">
-        <h1 id="color-red">Eid Ul Adha</h1>
-        <p id="color-white">i'm gonna do it</p>
+    <h1 id="color-red">Eid Ul Adha</h1>
+    <p id="color-white">i'm gonna do it</p>
 
     </p>
-    
+
 
 </footer>
 
