--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 <body>
 
     <header>
-        <Div class="top-bg">
-        </div>
+        <section class="top-bg">
+
 
         <div class="heading-title">
             <h1>Let’s Finish your</h1>
             <h1>internal Evil</h1>
-            <p id="title-paragraph">According to the Hanafi madhab, zakat is 2.5% of wealth that has been in one's
+            <p >According to the Hanafi madhab, zakat is 2.5% of wealth that has been in one's
                 possession for a lunar year. If wealth
                 amounts to less than a threshold figure, termed the nisab, then no zakat is payable.</p> <br> <br>
-
             <a target="_blank" class="donate-button" href="">Donate Now</a>
         </div>
+        </section>
 
         <section>
 
